--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,8 @@
 #container{
     display:flex;
-    flex-wrap: wrap;
 }
-
-#container div{
-    display: inline-block;
-    background: blue;
-    margin: 10px 0 0 2%;
-    flex-grow: 1;
-    height: 100px;
-    
+body{
+    display: flex;
+    align-items: center;
+    gap: 20px;
 }
